// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reset Password Header Component should match the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      type="style-1"
    >
      Reset password
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-3"
  >
    <div
      type="style-6"
    >
      For
       
      dummy@test.com
      <br />
      <br />
      <span>
        Your password must contain
      </span>
      :
      <br />
      - 
      <span>
        8 or more characters
      </span>
      <br />
      - 
      <span>
        Upper and lowercase characters
      </span>
      <br />
      - 
      <span>
        At least one number
      </span>
    </div>
  </div>
</div>
`;

exports[`Reset Password Header Component should match the snapshot for the first time user 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-5"
  >
    <div
      type="style-1"
    >
      Set up your dummy account
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-6"
  >
    <div
      type="style-6"
    >
      For
       
      dummy@test.com
      <br />
      <br />
      <span>
        Your password must contain
      </span>
      :
      <br />
      - 
      <span>
        8 or more characters
      </span>
      <br />
      - 
      <span>
        Upper and lowercase characters
      </span>
      <br />
      - 
      <span>
        At least one number
      </span>
    </div>
  </div>
</div>
`;
